# utm

./: .gitignore  PRIVACY.md  README.md  build.gradle.kts  compose_compiler_config.conf  gradle.properties  module_graph.sh  secrets.defaults.properties  settings.gradle.kts  setup.sh
.hooks/: prepare-commit-msg
app/: README.md  build.gradle.kts
app/src/main/: AndroidManifest.xml
build-logic/: README.md
build-logic/convention/: build.gradle.kts
core/common/: README.md  build.gradle.kts
core/common/src/main/: AndroidManifest.xml
core/data/: README.md  build.gradle.kts
core/database/: README.md  build.gradle.kts
core/database/schemas/br.com.b256.core.database.RoomDatabase/: 1.json  2.json
core/datastore/: README.md  build.gradle.kts
core/designsystem/: README.md  build.gradle.kts
core/domain/: README.md  build.gradle.kts
core/model/: README.md  build.gradle.kts
core/network/: README.md  build.gradle.kts
core/notification/: README.md  build.gradle.kts
core/service/: build.gradle.kts
core/service/src/main/: AndroidManifest.xml
core/toolbox/: build.gradle.kts
core/toolbox/src/main/cpp/: CMakeLists.txt  toolbox.cpp
core/toolbox/src/main/cpp/header/: turbojpeg.h
core/ui/: README.md  build.gradle.kts
core/ui/src/main/: AndroidManifest.xml
feature/home/: README.md  build.gradle.kts
feature/place/: build.gradle.kts
feature/settings/: README.md  build.gradle.kts
feature/utm/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lint/: README.md  build.gradle.kts
(+174 files in other folders)
